deleteProductFromCart endpoint created